<resources>
    <string name="app_name">Open Meteo</string>
    <string name="permissions_required">Permissions required</string>
    <string name="permissions_are_required_for_the_program_to_work">Permissions are required for the program to work</string>
    <string name="location_not_found">Location not found</string>
    <string name="you_need_to_enable_geolocation">You need to enable geolocation</string>
    <string name="turn_on_the_internet">Turn on the internet</string>
    <string name="internet_is_required_for_the_program_to_work">Internet is required for the program to work</string>
    <string name="update">Update</string>
    <string name="forecast_missing">Forecast missing</string>
    <string name="weather_forecast_is_missing_try_refreshing">Weather forecast is missing, try refreshing</string>
    <string name="today">Today</string>
    <string name="loading">Loading</string>
    <string name="it_has_to_happen_quickly">It has to happen quickly :)</string>
    <string name="now">Now</string>
    <string name="grant_permission">Grant permission</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="address_unknown">Address unknown</string>
    <string name="add_location">Add location</string>
    <string name="need_provide_location">To get the weather forecast, you need to provide your location</string>
    <string name="geolocation">Geolocation</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="saved_locations">Saved locations</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="average_humidity">Average humidity</string>
    <string name="widget_default_location">Texas, Houston</string>
    <string name="widget_default_date">Sunday, Sep 27</string>
    <string name="widget_default_temp">27°</string>
    <string name="widget_default_time">3:00 PM</string>
    <string name="widget_default_temp_max_min">31°/13°</string>
    <string name="widget_default_weather">Overcast</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="max_uv_index">Max UV index</string>
    <string name="clear_scy_uv_index">Clear scy UV index</string>
</resources>