<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:clipToOutline="true"
    android:elevation="4dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:orientation="vertical">
        <!-- Time TextView -->
        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_default_time"
            android:textColor="@color/onPrimary"
            android:textSize="14sp" />

        <!-- Temperature TextView -->
        <TextView
            android:id="@+id/big_temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/widget_default_temp"
            android:textColor="@color/onPrimary"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Min/Max Temperature TextView -->
        <TextView
            android:id="@+id/min_max_temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_default_temp_max_min"
            android:textColor="@color/onPrimary"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="vertical">
        <!-- Weather Icon -->
        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/mostly_clear_day" />

        <!-- Weather Condition TextView -->
        <TextView
            android:id="@+id/weatherConditionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/widget_default_weather"
            android:textColor="@color/onPrimary"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>