<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    android:clipToOutline="true"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/widget_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/mostly_clear_day" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="4dp">

            <!-- Location Text -->
            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/widget_default_location"
                android:textColor="@color/onPrimary"
                android:textFontWeight="500"
                android:textSize="16sp" />

            <!-- Time Text -->
            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/widget_default_date"
                android:textColor="@color/onPrimary"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <!-- Temperature Text -->
        <TextView
            android:id="@+id/temp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:maxLines="1"
            android:text="@string/widget_default_temp"
            android:textColor="@color/onPrimary"
            android:textFontWeight="500"
            android:textSize="24sp" />
    </LinearLayout>
</FrameLayout>